Various small fixes and cleanup.
Flash back in during checkout. customer orders see shipping label errors
now. Don't show tracking label link when we don't have it.

--- a/app/views/admin/ecommerce/customer_orders/show.haml
+++ b/app/views/admin/ecommerce/customer_orders/show.haml
@@ -35,9 +35,8 @@
       =@order.user.email
   .col-sm-4
     %p
-      %strong Order Status:
-      - style = "color: red" if @order.status == 'failed'
-      %span{style: "#{style}"}= @order.status
+      %b Status:
+      = render 'status', order: @order
       %br
       %strong Gift wrapt:
       = @order.gift_wrapt? ? 'Yes' : 'No'
