--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -32,8 +32,9 @@
         = render 'breadcrumbs'
         - if @show_account_sub_nav
           = render 'my_account/sub_nav'
-      - if show_checkout_nav?
+      - elsif show_checkout_nav?
         = render 'ecommerce/checkout/nav'
+        = render 'layouts/alerts'
       = yield
     = yield :after_wrapper
 
