--- a/app/views/admin/ecommerce/customer_orders/index.haml
+++ b/app/views/admin/ecommerce/customer_orders/index.haml
@@ -47,14 +47,7 @@
             %td= order.order_number
             %td= format_date(order.created_on)
             %td= order.user_email
-            %td
-              = order.status.titleize
-              - if order.bad_charge?
-                %br
-                %span{style: 'color: red;'} Credit card problem
-              - if order.bad_tax_transaction?
-                %br
-                %span{style: 'color: red;'} Tax calculation problem
+            %td= render "status", order:  order
             %td.text-right
               %b= number_to_currency(order.total_to_charge_in_dollars)
             %td.admin-index-table--buttons-cell
