--- a/app/views/giftees/new.html.haml
+++ b/app/views/giftees/new.html.haml
@@ -15,4 +15,4 @@
 
 - content_for :after_wrapper do
   = render 'home/how_wrapt_works'
-  = render 'home/wrapt_stories'
+  = render 'home/wrapt_stories', stories: :home_page_stories
