--- a/app/views/admin/ecommerce/billings/index.haml
+++ b/app/views/admin/ecommerce/billings/index.haml
@@ -53,6 +53,7 @@
             sum_wrapt_cost = 0.0
             sum_shipping_cost = 0.0
             sum_shipping_charged = 0.0
+            sum_handling_cost = 0.0
           - @purchase_orders.each do |po|
             - this_cycle_class = cycle('even-order', 'odd-order')
             - po.line_items.each do |line_item|
@@ -60,8 +61,9 @@
                 product = line_item.orderable
                 customer_order = po.customer_order
                 sum_wrapt_cost += product.wrapt_cost
-                sum_shipping_cost +=  po.shipping_cost_in_dollars_for(product)
-                sum_shipping_charged += po.shipping_in_dollars_for(product)
+                #sum_shipping_cost +=  po.shipping_cost_in_dollars_for(product)
+                #sum_shipping_charged += po.shipping_in_dollars_for(product)
+                sum_handling_cost += po.handling_cost_in_dollars
               %tr{class: this_cycle_class}
                 %td
                   = link_to admin_ecommerce_purchase_order_path(po) do
@@ -87,9 +89,7 @@
               %td.text-right
                 %strong= number_to_currency(sum_wrapt_cost)
               %td.text-right
-                %strong= number_to_currency(sum_shipping_cost)
-              %td.text-right
-                %strong= number_to_currency(sum_shipping_charged)
+                %strong= number_to_currency(sum_handling_cost)
             - else
               %td{colspan: 7}
               %td.text-right{colspan: 3} Filter report further for sums
