--- a/app/views/survey_question_responses/_multiple_choice_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_fields.haml
@@ -16,10 +16,11 @@
 
 = form.input :other_option_text, as: :string, label: false, wrapper_html: { data: {behavior: 'other-text-input-wrapper'}, style: other_optional_text_init_style(@question_response)}, input_html: {data: {behavior: 'other-text-input'}}
 
-.sqr-option-explanations.pa1
-  - @question_response.survey_question.options.each do |option|
-    - if option.explanation.present?
-      .sqr-option-explanation{data: {behavior: 'option-explantion', option_id: option.id}}= option.explanation
+- if @question_response.survey_question.options.any? { |option| option.explanation.present? }
+  .sqr-option-explanations.pa1
+    - @question_response.survey_question.options.each do |option|
+      - if option.explanation.present?
+        .sqr-option-explanation{data: {behavior: 'option-explantion', option_id: option.id}}= option.explanation
 
 - content_for :page_js do
   :javascript
