--- a/app/views/ecommerce/vendor_confirmations/show.haml
+++ b/app/views/ecommerce/vendor_confirmations/show.haml
@@ -1,18 +1,18 @@
 .container
   = simple_form_for @purchase_order, url: url_for, method: :put do |f|
     .row
-      .col-sm-5
+      .col-xs-5
         = f.input :vendor_acknowledgement_status, collection: [ ['I have all products and will ship them to the customer in the boxes listed below', PurchaseOrder::FULFILL], ['I cannot fulfill this order', PurchaseOrder::DO_NOT_FULFILL] ], label: 'Status', hint: 'Update shipping box (if needed) before clicking acknowledge.'
 
-      .col-sm-5
+      .col-xs-5
         = f.input :vendor_acknowledgement_reason, collection: PurchaseOrder::NO_FULFILL_REASONS, label: 'Reason', hint: 'only fill out if you cannot fulfill the order'
 
-      .col-sm-2
+      .col-xs-2
         &nbsp;
-        %button.btn.btn-sm.btn-warning Acknowledge
+        %button.btn.btn-xs.btn-warning Acknowledge
 
     .row#js-other-reason{style: 'display: none; margin-bottom: 25px'}
-      .col-sm-10
+      .col-xs-10
         .controls
           %label.control-label
             Other Reason
@@ -32,7 +32,7 @@
 
 
   .row
-    .col-sm-12
+    .col-xs-12
       = render "order_details"
 
 = content_for :page_js do
