--- a/app/views/ecommerce/vendor_confirmations/show.haml
+++ b/app/views/ecommerce/vendor_confirmations/show.haml
@@ -9,7 +9,7 @@
 
       .col-xs-12.col-sm-2
         &nbsp;
-        %button.btn.btn-xs.btn-warning Acknowledge
+        %button.btn.btn-warning Acknowledge
 
     .row#js-other-reason{style: 'display: none; margin-bottom: 25px'}
       .col-xs-10
