--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -4,6 +4,12 @@
   line-height: 1;
   min-width: 180px;
 }
+.btn {
+  @media(max-width: $screen-xs-max) {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
 .btn-narrower {
   padding-left: 20px;
   padding-right: 20px;
