--- a/app/views/static_pages/about.haml
+++ b/app/views/static_pages/about.haml
@@ -5,7 +5,7 @@
         About Wrapt
   .about-content
     .row
-      .col-xs-12.col-md-10.col-md-offset-1
+      .col-xs-12.col-sm-9.col-sm-offset-2.mb2
         .about-page__note
           %p.about-page__tagline We're a little old fashioned.
           %p 
@@ -17,7 +17,7 @@
             = embedded_svg('icon-wrapt-heart', class: 'icon')
             ="."
           %p 
-            A Wrapt gift means someone thought about you, what makes you special and chose a gift to reflect who you are.
+            A Wrapt gift means someone thought about what makes you special, and chose a gift that reflects who you are.
           %p 
             Our gifts are handmade with 
             = embedded_svg('icon-wrapt-heart', class: 'icon') 
@@ -32,10 +32,10 @@
     .row
       .col-xs-12.col-md-10.col-md-offset-1
         .row
-          .col-xs-12.col-sm-6.about-page__mv
+          .col-xs-12.col-sm-4.col-sm-offset-2.about-page__mv.mb3
             %h4.about-page__header Our Mission
             %p to promote positive connection between people through authentic gift-giving.
-          .col-xs-12.col-sm-6.about-page__mv
+          .col-xs-12.col-sm-4.col-sm-offset-1.about-page__mv
             %h4.about-page__header Our Vision
             %p to create a socially conscious brand that connects people with love.
 
