--- a/app/views/ecommerce/checkout/_edit_gift_wrapt_form.haml
+++ b/app/views/ecommerce/checkout/_edit_gift_wrapt_form.haml
@@ -1,4 +1,4 @@
-%h3.light 
+%h3.light
   Gift Wrapt
   -# %span.small (Complimentary)
 - form_data = @load_in_modal ? {submits_to_pjax_modal: true} : {}
@@ -9,12 +9,15 @@
     Gift wrapping is complimentary.
   .j-co-gift-wrapt__note-1{style: f.object.gift_wrapt? ? '' : 'display: none;'}
     .co-add-a-note
-      %h4.light 
-        Add a Note for 
+      %h4.light
+        Add a Note for
         =@profile.name
       -# FYI: this checkbox is checked on false!
       = f.input :include_note, as: :wrapt_styled_checkbox, label: 'Do not include a note', checked_value: 0, unchecked_value: 1
     .j-co-gift-wrapt__note-2{style: f.object.include_note? ? '' : 'display: none;'}
+      .row
+        .col-xs-8
+          = f.input :note_envelope_text, label: 'What would you like the front of the note envelope to say?'
       .row
         .col-xs-12
           = f.input :note_content, label: 'Your Note'
