--- a/app/views/ecommerce/checkout/_edit_review_summary_items.haml
+++ b/app/views/ecommerce/checkout/_edit_review_summary_items.haml
@@ -3,4 +3,4 @@
 - if customer_order.gift_wrapt?
   = render 'ecommerce/checkout/edit_review_summary_item', label: 'Gift Wrapt', co_attr: :uncharged_gift_wrapt_fee_in_dollars, value_in_dollars: true, value: nil , customer_order: customer_order, markout: true
 = render 'ecommerce/checkout/edit_review_summary_item', label: 'Curation Fee', co_attr: nil, value_in_dollars: true, value: CustomerOrder.uncharged_curation_fee_in_dollars, customer_order: customer_order, markout: true
-= render 'ecommerce/checkout/edit_review_summary_item', label: 'Shipping', co_attr: nil, value_in_dollars: true, value: customer_order.combined_handling_in_dollars, customer_order: customer_order, markout: false
+= render 'ecommerce/checkout/edit_review_summary_item', label: 'Shipping & Handling', co_attr: nil, value_in_dollars: true, value: customer_order.combined_handling_in_dollars, customer_order: customer_order, markout: false
