[#152646777] Allow vendors to change shipping choices

--- a/app/views/ecommerce/vendor_confirmations/_order_details.haml
+++ b/app/views/ecommerce/vendor_confirmations/_order_details.haml
@@ -50,7 +50,7 @@
     .col-xs-12.col-sm-6
       %h3 Note Details
       %strong Content:
-      %p.sg-box__content{style: 'white-space: pre; text-align: left;'}
+      %p.sg-box__content{style: 'white-space: pre; text-align: left; overflow: auto'}
         = @customer_order.note_content
 
       %strong Envelope Text:
