--- a/app/views/static_pages/_start_quiz.haml
+++ b/app/views/static_pages/_start_quiz.haml
@@ -16,5 +16,8 @@
                   - if current_user&.admin?
                     = hidden_field_tag :survey_id, @survey.id
                   = render response_fields_partial, form: form, label: @question_response.survey_question.prompt
+                  .sqr-submit__container.text-right#js-sqr-submit__container
+                    %button{type: "submit", class: 'btn btn-primary sqr-submit__btn', data: {behavior: 'next-question-button'}}
+                      Next
         .text-center
           = embedded_svg('icon-gift-better-gift-wrapt', class: "landing-bottom__icon-gift-better-gift-wrapt mt6")
