--- a/app/views/admin/gifts/show.html.haml
+++ b/app/views/admin/gifts/show.html.haml
@@ -8,6 +8,10 @@
 .row
   .col-sm-6
     %p
+      %b Vendor:
+      = link_to @gift.vendor.name, [:admin, @gift.vendor]
+
+    %p
       %b Description:
       = @gift.description
 
@@ -68,7 +72,6 @@
             %option{value: current_user.id}= current_user.full_name + "'s"
 
           account.
-
 
 .row
   .col-sm-12
